--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Areas/Identity/Pages/Account/Logout.cshtml
@@ -2,6 +2,7 @@
 @model LogoutModel
 @{
     ViewData["Title"] = "Log out";
+    var returnUrl = Url.Action("Index", "Showcase");
 }
 
 <header>
@@ -9,7 +10,7 @@
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@returnUrl" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
             </form>
         }
